[package]
edition = "2021"
name = "fpt"
version = "0.1.0"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hlua = { version = "0.4.1", optional = true }
rustyline = { version = "12", optional = true }
# winit = "0.28.7"
# pixels = "0.13.0"
# cpal = "0.15.2"
sdl2 = "0.35.2"
# miniquad = "0.3.16"

[dev-dependencies]
rstest = "0.18"

[[bin]]
name = "main"

[[bin]]
name = "gui"

[[bin]]
name = "debug"
required-features = ["hlua", "rustyline"]

[[bin]]
name = "objdump"
