[package]
edition = "2021"
name = "fpt"
version = "0.1.0"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
hlua = { version = "0.4.1" }
rustyline = { version = "12"}
winit = "0.28.7"
pixels = "0.13.0"

[dev-dependencies]
rstest = "0.18"

