[package]
name = "fpt-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
eframe = { version = "0.23.0", default-features = false, features = [ "glow" ] }
log = "0.4.14"
instant = "0.1.12"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"

