[package]
name = "fpt-egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fpt = { path = "../fpt" }
egui = "0.26.2"
eframe = { version = "0.26.2", default-features = false, features = ["glow"] }
log = "0.4.14"
sha2 = "0.10.8"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.88"
wasm-bindgen-futures = "0.4.38"
js-sys = "0.3.65"
web-sys = { version = "0.3.65", features = ["Performance"] }
